# rustc_codegen_cranelift

./: .cirrus.yml  Cargo.toml  Readme.md  config.txt  y.rs
.github/workflows/: main.yml
build_system/: bench.rs  build_backend.rs  build_sysroot.rs  landlock.rs  main.rs  mod.rs  path.rs  prepare.rs  rustc_info.rs  tests.rs  utils.rs
example/: mini_core.rs  mini_core_hello_world.rs
llvm_archive_writer/: Cargo.toml  Readme.md
llvm_archive_writer/src/: alignment.rs  archive.rs  archive_writer.rs  lib.rs
patches/: stdlib-lock.toml
scripts/: setup_rust_fork.sh  test_rustc_tests.sh
src/: archive.rs  archive2.rs  base.rs  global_asm.rs  lib.rs  num.rs  toolchain.rs  trap.rs
src/debuginfo/: unwind.rs
src/driver/: aot.rs
