[package]
name = "llvm_archive_writer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.27.0", default-features = false, features = ["std", "read_core", "coff", "elf", "macho", "pe"] }
